--- a/examples/visualize_initialize2.ipynb
+++ b/examples/visualize_initialize2.ipynb
@@ -14,11 +14,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a63f0057",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting ipywidgets\n",
+      "  Using cached ipywidgets-8.1.7-py3-none-any.whl.metadata (2.4 kB)\n",
+      "Requirement already satisfied: comm>=0.1.3 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipywidgets) (0.2.3)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipywidgets) (9.5.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipywidgets) (5.14.3)\n",
+      "Collecting widgetsnbextension~=4.0.14 (from ipywidgets)\n",
+      "  Using cached widgetsnbextension-4.0.14-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting jupyterlab_widgets~=3.0.15 (from ipywidgets)\n",
+      "  Using cached jupyterlab_widgets-3.0.15-py3-none-any.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.4.6)\n",
+      "Requirement already satisfied: decorator in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (5.2.1)\n",
+      "Requirement already satisfied: ipython-pygments-lexers in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (1.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.1.7)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (3.0.52)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (2.19.2)\n",
+      "Requirement already satisfied: stack_data in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.6.3)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets) (0.2.13)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.5)\n",
+      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from stack_data->ipython>=6.1.0->ipywidgets) (2.2.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from stack_data->ipython>=6.1.0->ipywidgets) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\internal\\documents\\github\\ls-pattern-compile\\.venv\\lib\\site-packages (from stack_data->ipython>=6.1.0->ipywidgets) (0.2.3)\n",
+      "Using cached ipywidgets-8.1.7-py3-none-any.whl (139 kB)\n",
+      "Using cached jupyterlab_widgets-3.0.15-py3-none-any.whl (216 kB)\n",
+      "Using cached widgetsnbextension-4.0.14-py3-none-any.whl (2.2 MB)\n",
+      "Installing collected packages: widgetsnbextension, jupyterlab_widgets, ipywidgets\n",
+      "\n",
+      "   ------------- -------------------------- 1/3 [jupyterlab_widgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   -------------------------- ------------- 2/3 [ipywidgets]\n",
+      "   ---------------------------------------- 3/3 [ipywidgets]\n",
+      "\n",
+      "Successfully installed ipywidgets-8.1.7 jupyterlab_widgets-3.0.15 widgetsnbextension-4.0.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ipywidgets"
+   ]
   },
   {
    "cell_type": "code",
@@ -27,10 +75,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using plotly for interactive 3D visualization\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Interactive plotting setup with plotly\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgraph_objects\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgo\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexpress\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpx\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msubplots\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m make_subplots\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'plotly'"
      ]
     }
    ],
@@ -46,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "51808d29",
    "metadata": {},
    "outputs": [],
@@ -122,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2fbe158e",
    "metadata": {},
    "outputs": [],
@@ -369,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ueutpeb0hc",
    "metadata": {},
    "outputs": [
@@ -2835,7 +2887,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.7)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2849,7 +2901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
