--- a/examples/debug_add_block.ipynb
+++ b/examples/debug_add_block.ipynb
@@ -26,19 +26,19 @@
       ],
       "source": [
         "# Imports\n",
-        "from lspattern.blocks import InitPlus\n",
-        "from lspattern.template.base import RotatedPlanarTemplate\n",
+        "from lspattern.blocks.initialize import InitPlusSkeleton\n",
+        "from lspattern.tiling.template import RotatedPlanarTemplate\n",
         "from lspattern.visualizers.temporallayer import visualize_temporal_layer\n",
         "from lspattern.canvas2 import TemporalLayer\n",
         "\n",
         "d = 3\n",
-        "kind = (\"Z\", \"X\", \"X\")  # (X, Y, Z) faces\n",
+        "edgespec = {\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}\n",
         "\n",
-        "# Build a block with a template and materialize its local graph\n",
-        "tmpl = RotatedPlanarTemplate(d=d, kind=kind)\n",
-        "blk = InitPlus(d=d, kind=kind, template=tmpl)\n",
-        "blk.materialize()\n",
-        "len(blk.node2coord), len(blk.graph_local.physical_nodes)\n"
+        "# Build a skeleton and materialize a canvas block\n",
+        "tmpl = RotatedPlanarTemplate(d=d, edgespec=edgespec)\n",
+        "skel = InitPlusSkeleton(d=d, edgespec=edgespec)\n",
+        "block = skel.to_canvas()\n",
+        "len(block.node2coord), len(block.graph_local.physical_nodes)\n"
       ]
     },
     {
@@ -61,7 +61,7 @@
         }
       ],
       "source": [
-        "blk.kind, blk.template, blk.boundary_spec"
+        "edgespec, tmpl, block.boundary_spec"
       ]
     },
     {
@@ -93,7 +93,7 @@
         }
       ],
       "source": [
-        "blk.schedule_local"
+        "block.schedule_local"
       ]
     },
     {
@@ -126,8 +126,8 @@
       "source": [
         "# Build a TemporalLayer and attach the block's geometry/graph\n",
         "layer = TemporalLayer(z=0)\n",
-        "layer.local_graph = blk.graph_local\n",
-        "layer.node2coord = dict(blk.node2coord)\n",
+        "layer.local_graph = block.graph_local\n",
+        "layer.node2coord = dict(block.node2coord)\n",
         "layer.coord2node = {coord: nid for nid, coord in layer.node2coord.items()}\n",
         "\n",
         "# Visualize with parity-matched coloring (white/red for DATA, blue X-anc, green Z-anc)\n",
@@ -2598,7 +2598,7 @@
         "from lspattern.visualizers.plotly_temporallayer import visualize_temporal_layer_plotly\n",
         "\n",
         "fig = visualize_temporal_layer_plotly(\n",
-        "    layer, node_roles=getattr(blk, \"node2role\", None), show_edges=True\n",
+        "    layer, node_roles=getattr(block, \"node2role\", None), show_edges=True\n",
         ")\n",
         "fig.show()\n"
       ]
@@ -2629,15 +2629,17 @@
         }
       ],
       "source": [
-        "from lspattern.blocks.base import RHGBlock2\n",
-        "from lspattern.blocks import InitPlus, MeasureX, Memory\n",
+        "from lspattern.blocks.initialize import InitPlusSkeleton\n",
+        "from lspattern.blocks import MeasureX, Memory\n",
         "from lspattern.canvas2 import RHGCanvas2\n",
         "from lspattern.mytype import PatchCoordGlobal3D, PipeCoordGlobal3D\n",
         "\n",
         "canvas = RHGCanvas2(\"Memory X\")\n",
         "\n",
+        "edgespec = {\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}\n",
+        "skel = InitPlusSkeleton(d=3, edgespec=edgespec)\n",
         "blocks = [\n",
-        "    (PatchCoordGlobal3D((0, 0, 0)), InitPlus(kind=(\"X\",\"X\",\"Z\"))),\n",
+        "    (PatchCoordGlobal3D((0, 0, 0)), skel),\n",
         "]\n",
         "pipes = []\n",
         "\n",
