--- a/examples/debug_temporl_layer.ipynb
+++ b/examples/debug_temporl_layer.ipynb
@@ -2,24 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4a6b2ada",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'MeasureX' from 'lspattern.blocks' (C:\\Users\\internal\\Documents\\GitHub\\ls-pattern-compile\\lspattern\\blocks\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlspattern\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mblocks\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01minitialize\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m InitPlusSkeleton\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlspattern\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mblocks\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MeasureX, Memory\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlspattern\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcanvas2\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RHGCanvas2\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlspattern\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtiling\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtemplate\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RotatedPlanarTemplate\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'MeasureX' from 'lspattern.blocks' (C:\\Users\\internal\\Documents\\GitHub\\ls-pattern-compile\\lspattern\\blocks\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
-    "from lspattern.blocks.base import RHGBlock2\n",
-    "from lspattern.blocks import InitPlus, MeasureX, Memory\n",
+    "from lspattern.blocks.initialize import InitPlusSkeleton\n",
     "from lspattern.canvas2 import RHGCanvas2\n",
-    "from lspattern.template.base import RotatedPlanarTemplate\n",
+    "from lspattern.tiling.template import RotatedPlanarTemplate\n",
     "from lspattern.mytype import PatchCoordGlobal3D, PipeCoordGlobal3D\n",
     "\n",
     "canvas = RHGCanvas2(\"Memory X\")\n",
     "\n",
-    "tmpl = RotatedPlanarTemplate(d=3, kind=(\"X\", \"X\", \"Z\"))\n",
+    "edgespec = {\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}\n",
+    "tmpl = RotatedPlanarTemplate(d=3, edgespec=edgespec)\n",
     "_ = tmpl.to_tiling()\n",
     "blocks = [\n",
-    "    (PatchCoordGlobal3D((0, 0, 0)), InitPlus(d=3, kind=(\"X\", \"X\", \"Z\"), template=tmpl)),\n",
-    "    (PatchCoordGlobal3D((2, 2, 0)), InitPlus(d=3, kind=(\"X\", \"X\", \"Z\"), template=tmpl)),\n",
+    "    (PatchCoordGlobal3D((0, 0, 0)), InitPlusSkeleton(d=3, edgespec=edgespec)),\n",
+    "    (PatchCoordGlobal3D((2, 2, 0)), InitPlusSkeleton(d=3, edgespec=edgespec)),\n",
     "]\n",
     "pipes = []\n",
     "\n",
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a263dfac",
    "metadata": {},
    "outputs": [
@@ -55,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e7682aa9",
    "metadata": {},
    "outputs": [],
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9c652dcd",
    "metadata": {},
    "outputs": [
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e809707c",
    "metadata": {},
    "outputs": [
