--- a/examples/visualize_initialize2.ipynb
+++ b/examples/visualize_initialize2.ipynb
@@ -19,22 +19,22 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'plotly'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Interactive plotting setup with plotly\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgraph_objects\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgo\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexpress\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpx\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msubplots\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m make_subplots\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'plotly'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using plotly for interactive 3D visualization\n"
      ]
     }
    ],
    "source": [
-    "# Interactive plotting setup with plotly\n",
-    "import plotly.graph_objects as go\n",
-    "import plotly.express as px\n",
-    "from plotly.subplots import make_subplots\n",
+    "# Interactive plotting setup with plotly (optional)\n",
+    "try:\n",
+    "    import plotly.graph_objects as go\n",
+    "    import plotly.express as px\n",
+    "    from plotly.subplots import make_subplots\n",
+    "    HAS_PLOTLY = True\n",
+    "except Exception:\n",
+    "    HAS_PLOTLY = False\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "print('Using plotly for interactive 3D visualization')"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "51808d29",
    "metadata": {},
    "outputs": [],
@@ -50,17 +50,19 @@
     "# 可視化ユーティリティの定義\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401\n",
-    "from lspattern.template.base import RotatedPlanarTemplate\n",
-    "from lspattern.blocks.initialize import InitPlus\n",
+    "from lspattern.tiling.template import RotatedPlanarTemplate\n",
+    "from lspattern.blocks.initialize import InitPlusSkeleton\n",
     "\n",
-    "def visualize_initplus(d=3, kind=(\"X\", \"Z\", \"X\"), ancilla_mode=\"both\", edge_width=3.0):\n",
-    "    template = RotatedPlanarTemplate(d=d, kind=kind)\n",
+    "def visualize_initplus(d=3, edgespec=None, ancilla_mode=\"both\", edge_width=3.0):\n",
+    "    if edgespec is None:\n",
+    "        edgespec = {\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}\n",
+    "    template = RotatedPlanarTemplate(d=d, edgespec=edgespec)\n",
     "    _ = template.to_tiling()\n",
-    "    block = InitPlus(d=d, kind=kind, template=template)\n",
-    "    block.materialize()\n",
+    "    skel = InitPlusSkeleton(d=d, edgespec=edgespec)\n",
+    "    block = skel.materialize()\n",
     "\n",
     "    g = block.graph_local\n",
-    "    node2coord = block.node2coords\n",
+    "    node2coord = block.node2coord\n",
     "    node2role = block.node2role\n",
     "\n",
     "    color_map = {\n",
@@ -80,7 +82,7 @@
     "    fig = plt.figure(figsize=(8, 7))\n",
     "    ax = fig.add_subplot(111, projection='3d')\n",
     "    ax.set_box_aspect((1, 1, 1))\n",
-    "    ax.set_title(f'InitPlus RHGBlock d={d} kind={kind}')\n",
+    "    ax.set_title(f'InitPlus RHGBlock d={d} edgespec={edgespec}')\n",
     "\n",
     "    for role, pts in groups.items():\n",
     "        if ancilla_mode == 'x' and role == 'ancilla_z':\n",
@@ -118,24 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2fbe158e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Interactive 3D visualization with plotly\n",
-    "from lspattern.template.base import RotatedPlanarTemplate\n",
-    "from lspattern.blocks.initialize import InitPlus\n",
+    "from lspattern.tiling.template import RotatedPlanarTemplate\n",
+    "from lspattern.blocks.initialize import InitPlusSkeleton\n",
     "\n",
-    "def create_interactive_initplus(d=3, kind=(\"X\", \"Z\", \"X\"), ancilla_mode=\"both\", edge_width=3.0, show_edges=True):\n",
+    "def create_interactive_initplus(d=3, edgespec=None, ancilla_mode=\"both\", edge_width=3.0, show_edges=True):\n",
     "    \"\"\"Create interactive 3D plotly visualization of InitPlus block\"\"\"\n",
-    "    template = RotatedPlanarTemplate(d=d, kind=kind)\n",
+    "    if edgespec is None:\n",
+    "        edgespec = {\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}\n",
+    "    template = RotatedPlanarTemplate(d=d, edgespec=edgespec)\n",
     "    _ = template.to_tiling()\n",
-    "    block = InitPlus(d=d, kind=kind, template=template)\n",
-    "    block.materialize()\n",
+    "    skel = InitPlusSkeleton(d=d, edgespec=edgespec)\n",
+    "    block = skel.materialize()\n",
     "\n",
     "    g = block.graph_local\n",
-    "    node2coord = block.node2coords\n",
+    "    node2coord = block.node2coord\n",
     "    node2role = block.node2role\n",
     "\n",
     "    # Color mapping\n",
@@ -233,7 +237,7 @@
     "\n",
     "    # Layout settings with reversed X and Y axes\n",
     "    fig.update_layout(\n",
-    "        title=f'Interactive InitPlus RHGBlock (d={d}, kind={kind})',\n",
+    "        title=f'Interactive InitPlus RHGBlock (d={d}, edgespec={edgespec})',\n",
     "        scene=dict(\n",
     "            xaxis_title='X',\n",
     "            yaxis_title='Y',\n",
@@ -262,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e148ef19eeab40cbb8b8dec8c5447a72",
+       "model_id": "ad0d6fde29904647850bcf63f92a4ed7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,15 +290,17 @@
     "        style={'description_width': 'initial'}\n",
     "    )\n",
     "    \n",
-    "    kind_dropdown = widgets.Dropdown(\n",
+    "    # EdgeSpec を辞書で選択（kind は deprecated）\n",
+    "    edgespec_dropdown = widgets.Dropdown(\n",
     "        options=[\n",
-    "            ('X-Z-X', ('X', 'Z', 'X')),\n",
-    "            ('Z-X-Z', ('Z', 'X', 'Z')),\n",
-    "            ('X-X-X', ('X', 'X', 'X')),\n",
-    "            ('Z-Z-Z', ('Z', 'Z', 'Z'))\n",
+    "            # TODO: TRTBの書き方でほかのstring argsを統一\n",
+    "            ('LRTB=XZZ', {\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}),\n",
+    "            ('Z-X-Z (LR=Z, TB=X)', {\"LEFT\": \"Z\", \"RIGHT\": \"Z\", \"TOP\": \"X\", \"BOTTOM\": \"X\"}),\n",
+    "            ('X-X-X (all X)',      {\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"X\", \"BOTTOM\": \"X\"}),\n",
+    "            ('Z-Z-Z (all Z)',      {\"LEFT\": \"Z\", \"RIGHT\": \"Z\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}),\n",
     "        ],\n",
-    "        value=('X', 'Z', 'X'),\n",
-    "        description='Kind:',\n",
+    "        value={\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"},\n",
+    "        description='Edgespec:',\n",
     "        style={'description_width': 'initial'}\n",
     "    )\n",
     "    \n",
@@ -327,7 +333,7 @@
     "            try:\n",
     "                fig = create_interactive_initplus(\n",
     "                    d=d_slider.value,\n",
-    "                    kind=kind_dropdown.value,\n",
+    "                    edgespec=edgespec_dropdown.value,\n",
     "                    ancilla_mode=ancilla_dropdown.value,\n",
     "                    edge_width=edge_width_slider.value,\n",
     "                    show_edges=show_edges_checkbox.value\n",
@@ -338,7 +344,7 @@
     "    \n",
     "    # Connect widgets to update function\n",
     "    d_slider.observe(update_plot, names='value')\n",
-    "    kind_dropdown.observe(update_plot, names='value')\n",
+    "    edgespec_dropdown.observe(update_plot, names='value')\n",
     "    ancilla_dropdown.observe(update_plot, names='value')\n",
     "    edge_width_slider.observe(update_plot, names='value')\n",
     "    show_edges_checkbox.observe(update_plot, names='value')\n",
@@ -347,7 +353,7 @@
     "    controls = widgets.VBox([\n",
     "        widgets.HTML(\"<h3>Interactive InitPlus 3D Visualization</h3>\"),\n",
     "        d_slider,\n",
-    "        kind_dropdown,\n",
+    "        edgespec_dropdown,\n",
     "        ancilla_dropdown,\n",
     "        edge_width_slider,\n",
     "        show_edges_checkbox\n",
@@ -365,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ueutpeb0hc",
    "metadata": {},
    "outputs": [
@@ -2812,7 +2818,7 @@
          }
         },
         "title": {
-         "text": "Interactive InitPlus RHGBlock (d=3, kind=('X', 'Z', 'X'))"
+         "text": "Interactive InitPlus RHGBlock (d=3, edgespec={'LEFT': 'X', 'RIGHT': 'X', 'TOP': 'Z', 'BOTTOM': 'Z'})"
         },
         "width": 800
        }
@@ -2824,7 +2830,7 @@
    ],
    "source": [
     "# Simple test - create a single interactive plot\n",
-    "fig = create_interactive_initplus(d=3, kind=(\"X\", \"Z\", \"X\"), ancilla_mode=\"both\", edge_width=3.0)\n",
+    "fig = create_interactive_initplus(d=3, edgespec={\"LEFT\": \"X\", \"RIGHT\": \"X\", \"TOP\": \"Z\", \"BOTTOM\": \"Z\"}, ancilla_mode=\"both\", edge_width=3.0)\n",
     "fig.show()"
    ]
   }
